[package]
name = "ehyve"
version = "0.0.12"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen>"]
license = "MIT/Apache-2.0"

[dependencies]
clap = "2.34"
elf = "0.0.10"
env_logger = "0.9"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
memmap = "0.7"
x86 = "0.50"

[target.'cfg(target_os = "macos")'.dependencies]
xhypervisor = "0.2"

[target.'cfg(target_os = "windows")'.dependencies.libwhp]
git = "https://github.com/insula-rs/libwhp.git"
rev = "3ee2119fa8a889cccbc223b0858bd1cdb1635975"

[target.'cfg(target_os = "linux")'.dependencies]
kvm-bindings = "0.5"
kvm-ioctls = "0.11"
